--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.5.0
   shared_preferences: ^2.5.3
   image_picker: ^1.0.7
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
